# moteus-controller

./: .gitignore  .gitmodules  README.md  controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch  fp-lib-table
controller.pretty/: 16AWG_PAD.kicad_mod  C0402.kicad_mod  C0603.kicad_mod  C0805.kicad_mod  C1206.kicad_mod  JST_S3B-PH-SM4-TB(LF)(SN).kicad_mod  NetTie-2_SMD_Pad0.2mm.kicad_mod  QFN50P700X700X60-49N.kicad_mod  R0402.kicad_mod  SODFL1608X70N.kicad_mod  SOIC8.kicad_mod  SOP_ADVANCE_8.kicad_mod  SOT23-3.kicad_mod
firmware/: .gitignore  STM32G431VBTX_FLASH.ld  STM32G431VBTX_FLASH_OPENBLT.ld  apply_simplefoc_patches.py  can_monitor.py  compile_commands.json  platformio.ini  startup_stm32g431xx_openblt.s
firmware/boards/: genericSTM32G431VB.json
firmware/host_openblt_flash/: CMakeLists.txt  openblt_flash.c
firmware/lib/STM32_CAN/: STM32_CAN.cpp  STM32_CAN.h
firmware/scripts/: apply_patches.py  build_host_openblt_flash.py  diff_flash_vs_bin.py  fdcanusb_probe.py  mass_erase.py  openblt_host_upload.py  patch_openblt_vector_checksum.py  pio_openblt_can_env.py  simplefoc_alignment.patch
firmware/src/: clock.c  main.cpp
firmware/src/app/: app_context.h  can_init.cpp  can_init.h  motor_init.cpp  motor_init.h  motor_objects.cpp  motor_tuning.cpp  motor_tuning.h  telemetry.cpp  telemetry.h
firmware/src/commands/: commands.cpp  commands.h
firmware/src/debug/: can_debug.cpp  can_debug.h  debug_init.cpp  debug_init.h
firmware/src/drivers/: motor_objects.cpp  motor_objects.h
firmware/src/hal/: hw_opamp.cpp  hw_opamp.h
firmware/src/platform/: fdcan.cpp  fdcan.h
firmware/src/storage/: pid_flash.cpp  pid_flash.h
firmware/src/telemetry/: messages.h  telemetry.cpp  telemetry.h
jlcpcb/: project.db
jlcpcb/gerber/: controller-CuBottom.gbr  controller-CuIn1.gbr  controller-CuIn2.gbr  controller-CuTop.gbr  controller-EdgeCuts.gbr  controller-MaskBottom.gbr  controller-MaskTop.gbr  controller-NPTH.drl  controller-PTH.drl  controller-PasteBottom.gbr  controller-PasteTop.gbr  controller-SilkBottom.gbr  controller-SilkTop.gbr  controller-VScore.gbr
pcb/: INDC2016X180N.kicad_mod  LBM2016T120J.kicad_sym  README.md  controller-eagle-import.kicad_sym  controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch  sym-lib-table  ~controller.kicad_sch.lck
pcb/controller.pretty/: 1812_COMMON_HALF.kicad_mod  21-0487A_MXM.kicad_mod  24AWG_PAD.kicad_mod  C0402_NOBORDER.kicad_mod  C0603_NOBORDER.kicad_mod  C1206_NOBORDER.kicad_mod  C1206_NOCREAM.kicad_mod  IND_BOURNS_SRN4018.kicad_mod  JST_S4B-ZR-SM4A-TF(LF)(SN).kicad_mod  JST_S6B-ZR-SM4A-TF(LF)(SN).kicad_mod  LED0603.kicad_mod  M1206.kicad_mod  M2.5MOUNT.kicad_mod  PICO-SPOX-SMT-RA-6-NOPASTE.kicad_mod  R0402_NOBORDER.kicad_mod  SHORT_TOP-50.kicad_mod  SHORT_TOP-MEDIUM.kicad_mod  SOT23-8-NOPASTE.kicad_mod  TSSOP14.kicad_mod  WQFN-40.kicad_mod  XT30PW_MALE.kicad_mod
production/: netlist.ipc
